@@ -1,4 +1,10 @@
 ==================================
+Rilascio 1.69.28    del 18/05/2015
+==================================
+
+Generalizzata la chiamata a "quiver_execute".
+
+==================================
 Rilascio 1.69.27    del 16/05/2015
 ==================================
 
